--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    position: relative;
+}
+
+.inputs-form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+}
+
+#size-input {
+    /*width: clamp(200px, 60%, );*/
+    width: 300px;
+}
+
+
 canvas {
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.4);
 }
