--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,74 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
+    /*width: 100vw;*/
+    /*height: 100vh;*/
 }
 
 .wrapper {
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    position: relative;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*gap: 2rem;*/
+    /*position: relative;*/
+    border: 3px solid red;
 }
 
 .inputs-form {
-    width: 100%;
+    /*border: 3px solid blueviolet;*/
+    /*width: 50%;*/
+    /*display: flex;*/
+
+    /*flex-wrap: wrap;*/
+    /*justify-content: center;*/
+    /*position: absolute;*/
+    /*top: 1rem;*/
+    /*margin-bottom: 5rem;*/
+    border: 3px solid red;
+    width: 75%;
+    /*height: 300px;*/
     display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 0;
+    gap: 1rem;
+}
+
+.left {
+    width: 50%;
+}
+
+.right {
+    width: 50%;
+}
+
+.flex-item {
+    /*border: 1px solid black;*/
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.checkbox {
+    width: 50%;
+}
+
+.text {
+    justify-content: flex-start;
+    gap: 1rem;
+}
+
+.range-inputs {
+    border: 3px solid greenyellow;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.checkboxes {
+    display: flex;
+    flex-direction: column;
 }
 
 #size-input {
